<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding"
        android:gravity="center|left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setdate"
            android:textColor="@color/blue"
            android:textSize="@dimen/tv_body" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tvheading_marginleft"
            android:background="@drawable/apptheme_textfield_activated_holo_light"
            android:hint="@string/date_hint"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_body" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_padding"
        android:gravity="center|left"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meal"
            android:textColor="@color/blue"
            android:textSize="@dimen/tv_body" />

        <Spinner
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/tvheading_marginleft"
            android:textColor="@color/grey"
            android:textSize="@dimen/tv_body" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/layout_padding"
        android:text="@string/extra"
        android:textColor="@color/blue"
        android:textSize="@dimen/tv_body"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

</LinearLayout>