<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_margin="@dimen/layout_padding">

                <ImageView
                    android:layout_width="240dp"
                    android:layout_height="180dp"
                    android:layout_marginTop="@dimen/layout_padding" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/layout_padding"
                android:text="St. Francis Xavier Home For Children"
                android:textColor="@color/blue"
                android:textSize="@dimen/tv_heading" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_padding"
                    android:text="Address"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_body_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/tvbody_marginleft"
                    android:text="#153, T.T.K Road, Alwarpet, Ch-18."
                    android:textColor="@color/grey"
                    android:textSize="@dimen/tv_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_padding"
                    android:text="Benificiary Details"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_body_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/tvbody_marginleft"
                    android:text="Children Orphanage Home for Girls."
                    android:textColor="@color/grey"
                    android:textSize="@dimen/tv_body" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_padding"
                    android:text="No of Bemnificiaries :"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_body_large" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/tvheading_marginleft"
                    android:text="100"
                    android:textColor="@color/grey"
                    android:textSize="@dimen/tv_body" />

            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_padding"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/setdate"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/tv_body_large" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tvheading_marginleft"
                        android:background="@android:drawable/editbox_background_normal"
                        android:hint="@string/date_hint"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/tv_body_large" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_padding"
                    android:gravity="center|left"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/meal"
                        android:textColor="@color/blue"
                        android:textSize="@dimen/tv_body_large" />

                    <Spinner
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/tvheading_marginleft"
                        android:textColor="@color/grey"
                        android:textSize="@dimen/tv_body_large" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/layout_padding"
                    android:text="@string/extra"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/tv_body_large"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:layout_width="fill_parent"
                        android:layout_height="match_parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <TextView
                        android:layout_width="150dp"
                        android:layout_height="30dp"
                        android:layout_margin="@dimen/donate_margin"
                        android:background="@color/blue"
                        android:gravity="center"
                        android:text="@string/donate"
                        android:textColor="@color/white"
                        android:textSize="@dimen/tv_body_large" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>