<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/heading_padding"
                android:text="Register"
                android:textColor="@color/blue"
                android:textSize="@dimen/tv_heading"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/login_body_top"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/title_marginbottom"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="1.4"
                                android:gravity="center|left"
                                android:text="@string/username"
                                android:textSize="@dimen/tv_body" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight=".2"
                                android:gravity="center"
                                android:text="@string/tv_div" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="1.4"
                                android:gravity="start"
                                android:inputType="number"
                                android:maxLength="10"
                                android:textColor="@color/blue"
                                android:textSize="@dimen/tv_body" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:weightSum="3">

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="1.4"
                                android:gravity="center|left"
                                android:text="@string/password"
                                android:textSize="@dimen/tv_body" />

                            <TextView
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight=".2"
                                android:gravity="center"
                                android:text="@string/tv_div" />

                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="fill_parent"
                                android:layout_weight="1.4"
                                android:gravity="start"
                                android:inputType="textPassword"
                                android:maxLines="3"
                                android:textColor="@color/blue"
                                android:textSize="@dimen/tv_body" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/btn_padding">

                        <TextView
                            android:layout_width="@dimen/btn_login_width"
                            android:layout_height="@dimen/btn_login_height"
                            android:background="@color/blue"
                            android:gravity="center"
                            android:text="@string/login"
                            android:textColor="@color/white"
                            android:textSize="@dimen/tv_body"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:id="@+id/login_body_bottom"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/title_marginbottom"
                                android:orientation="horizontal"
                                android:weightSum="3">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1.4"
                                    android:gravity="center|left"
                                    android:text="@string/username"
                                    android:textSize="@dimen/tv_body" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight=".2"
                                    android:gravity="center"
                                    android:text="@string/tv_div" />

                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1.4"
                                    android:gravity="start"
                                    android:inputType="number"
                                    android:maxLength="10"
                                    android:textColor="@color/blue"
                                    android:textSize="@dimen/tv_body" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="3">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1.4"
                                    android:gravity="center|left"
                                    android:text="@string/password"
                                    android:textSize="@dimen/tv_body" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight=".2"
                                    android:gravity="center"
                                    android:text="@string/tv_div" />

                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1.4"
                                    android:gravity="start"
                                    android:inputType="textPassword"
                                    android:maxLines="3"
                                    android:textColor="@color/blue"
                                    android:textSize="@dimen/tv_body" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:weightSum="3">

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1.4"
                                    android:gravity="center|left"
                                    android:text="@string/confirm_password"
                                    android:textSize="@dimen/tv_body" />

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight=".2"
                                    android:gravity="center"
                                    android:text="@string/tv_div" />

                                <EditText
                                    android:layout_width="0dp"
                                    android:layout_height="fill_parent"
                                    android:layout_weight="1.4"
                                    android:gravity="start"
                                    android:inputType="textPassword"
                                    android:maxLines="3"
                                    android:textColor="@color/blue"
                                    android:textSize="@dimen/tv_body" />

                            </LinearLayout>

                            <LinearLayout
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:padding="@dimen/btn_padding">

                                <TextView
                                    android:layout_width="@dimen/btn_login_width"
                                    android:layout_height="@dimen/btn_login_height"
                                    android:background="@color/blue"
                                    android:gravity="center"
                                    android:text="@string/signup"
                                    android:textColor="@color/white"
                                    android:textSize="@dimen/tv_body"
                                    android:textStyle="bold" />

                            </LinearLayout>


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:gravity="right">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
